tests/fixtures/positive/style/ExplicitCollectionElementAccessMethod.kt
package style

fun example() {
    val map = mapOf("key" to "value")
    val result = map.get("key")
    val list = mutableListOf(1, 2, 3)
    list.set(0, 42)
}
