tests/fixtures/negative/style/RangeUntilInsteadOfRangeTo.kt
package style

fun example() {
    for (i in 0..<10) {
        println(i)
    }
    for (i in 0..10) {
        println(i)
    }
    val r = 0.rangeTo(10)
    val sum = 1 + 2
}
